# llmkb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  metadata-resolution-plan.md  multi-format-support.md  schema.md  todo.md  user-manual.md
src/llmkb/: add_source.py  build_concept_pages.py  build_source_pages.py  catalog_raw.py  clean_kb.py  compare_sources.py  export_bibtex.py  extract_pages.py  kb_common.py  metadata_resolver.py  recover_metadata.py  reject_source.py  rename_kb.py  resolve_near_duplicates.py  search_kb.py  sync_zotero.py  test_metadata.py  update_kb.py
tests/: test_catalog_raw.py  test_export_bibtex.py  test_metadata_resolver.py  test_metadata_resolver_live.py  test_sync_zotero.py  test_update_kb.py
