[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmkb"
version = "0.1.0"
description = "LLM Knowledge Base Engine"
requires-python = ">=3.9"
dependencies = [
    "litellm>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
llmkb-update = "llmkb.update_kb:main"
llmkb-test-metadata = "llmkb.test_metadata:main"
llmkb-add = "llmkb.add_source:main"
llmkb-clean = "llmkb.clean_kb:main"
llmkb-rename = "llmkb.rename_kb:main"
llmkb-extract = "llmkb.extract_pages:main"
llmkb-resolve = "llmkb.resolve_near_duplicates:main"
llmkb-build-source = "llmkb.build_source_pages:main"
llmkb-build-concept = "llmkb.build_concept_pages:main"
llmkb-recover-metadata = "llmkb.recover_metadata:main"
llmkb-reject = "llmkb.reject_source:main"
llmkb-export = "llmkb.export_bibtex:main"
llmkb-search = "llmkb.search_kb:main"
